fix column overlap - landing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -275,7 +275,6 @@ a {
   text-align: center;
   font-size: 18px;
   width: 100%;
-  max-height: 550px;
 }
 
 .intro-copy {
